--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Hangman</h1>
+    <section class="letters">
+        <div id="A">A</div>
+        <div id="B">B</div>
+        <div id="C">C</div>
+        <div id="D">D</div>
+        <div id="E">E</div>
+        <div id="F">F</div>
+        <div id="G">G</div>
+        <div id="H">H</div>
+        <div id="I">I</div>
+        <div id="J">J</div>
+        <div id="K">K</div>
+        <div id="L">L</div>
+        <div id="M">M</div>
+        <div id="N">N</div>
+        <div id="O">O</div>
+        <div id="P">P</div>
+        <div id="Q">Q</div>
+        <div id="R">R</div>
+        <div id="S">S</div>
+        <div id="T">T</div>
+        <div id="U">U</div>
+        <div id="V">V</div>
+        <div id="W">W</div>
+        <div id="X">X</div>
+        <div id="Y">Y</div>
+        <div id="Z">Z</div>
+    </section>
+    <!-- the picture of hangman wil be shown here -->
+    <section id="image">
+        <img src="assets/hangman0.png" alt="hangman">
+    </section>
+    <!-- here we can see some hints about the word given -->
+    <section id="clue">
+        <p>________</p>
+    </section>
+    <!-- this section will show us the result -->
+    <section id="gameover">
+        <p>Game Over</p>
+    </section>
     <script src="./main.js"></script>
 </body>
 </html>
