CSS codes added to project/site logo changed /section class corrected in HTML codes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="assets/logo1.jpg" type="image/x-icon" />
 </head>
 <body>
     <h1>Hangman</h1>
-    <section class="letters">
+    <section id="letters">
         <div id="A">A</div>
         <div id="B">B</div>
         <div id="C">C</div>
